app/assets/stylesheets/hyku.scss
/* ... */
.mt-5 {
    margin-top: 3em;
}

.mt-2 {
    margin-top: 0.5em;
}

.mb-2 {
    margin-bottom: 0.5em;
}

.mb-5 {
    margin-bottom: 3em;
}

.mx-3 {
    margin-right: 1em;
    margin-left: 1em;
}

.ml-auto {
    margin-left: auto;
}

.py-0 {
    padding-bottom: 0;
    padding-top: 0;
}

.py-4 {
    padding-bottom: 2em;
    padding-top: 2em;
}

.d-block {
    display: block;
}

// hide iiif-print feature flipper

tr[data-feature="use-iiif-print"] {
    display: none;
}

// collection branding thumbnail
.branding-thumbnail-row {
    border-top: solid 1px #dddddd;
    padding-top: 10px;
}

.branding-thumbnail-input {
    text-align: right;
    width: 250px;

    input {
        text-align: left;
    }
}

.branding-thumbnail-remove,
.branding-thumbnail-remove:hover {
    background-color: #ffffff;
    border-color: #ffffff;
    color: $brand-danger;
    font-weight: normal;
    text-decoration: underline;
}

.carousel-control-prev-icon {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
}

.carousel-control-next-icon {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0L1.25 1.5 3.75 4 1.25 6.5 2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
}

// OVERRIDE Hyrax v5.0.1 to fix sidebar position
.sidebar {
    padding-bottom: calc(2rem + 3rem);
    position: fixed;
    height: 100%;
    overflow-x: hidden;

    &.maximized {
        .sidebar-toggle {
            transition: 0.1s;
            position: fixed;
            left: 252px;
        }
    }

    .sidebar-toggle {
        position: fixed;
        left: 32px;
        transition: 0.1s;
    }
}

// Featured collection
#featured_collections {
    h3 {
        font-size: inherit;
    }
}

// slideshow heading
.slideshow-info {
    text-align: center;
    margin-bottom: 15px;
}

/* Collection show page */

// nav search header
#search-form-header {
    // adds bootstrap class to element
    label[for="search-field-header"] {
        @extend .sr-only;
    }

    .form-group {
        justify-content: right;
    }
}

.hyc-bugs {
    margin-top: 10px;
}

.hyc-bl-results {
    margin: 2em 0 2em;
}

.hyrax-collections-show {
    .document-metadata {
        dd {
            word-break: break-all;
        }
    }

    table.table-striped {
        th {
            &:not(:nth-child(1)):not(:nth-child(2)) {
                text-align: center;
            }
            border-top: none;
        }
    }
}

dd {
    /* margin-bottom: .5rem; */
    margin-left: 0;
    margin-bottom: 0;
}

// collections gallery view
#documents {
    // hide the bookmark button
    .caption-area {
        input[name="commit"] {
            display: none;
        }
    }
}

// pagination
.hyc-bl-pager {
    .pagination {
        display: flex;
    }
}

@media (max-width: 768px) {
    .hyc-banner {
        .hyc-bugs {
            flex-wrap: wrap;
        }
    }
}
/* End Collection show page */

/* blacklight advanced search */

@media only screen and (min-width: 640px) {
    form.advanced .form-group > label {
        text-align: left;
    }
}
/* End blacklight advanced search */

// Style instruction hints for file inputs with left border accent
.form-group .help-block.border-left-accent {
    border-left: 3px solid #007bff;
    padding-left: 1rem;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    margin-bottom: 0.75rem;
    font-size: 0.875rem;
    color: #6c757d;
}

// Accessibility fix for breadcrumb contrast on System Status page
.breadcrumb a {
    color: #212529;
}

